--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "eslint": "^7.18.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-loader": "^4.0.2",
-    "html-webpack-plugin": "^4.5.1",
+
     "mini-css-extract-plugin": "^1.3.4",
     "node-loader": "^1.0.2",
     "sass": "^1.32.4",
@@ -46,6 +44,9 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1"
+    "@babel/polyfill": "^7.12.1",
+    "normalize.css": "^8.0.1"
   }
 }
+
+
