--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "browserslist": ">0.2%, not dead",
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -33,8 +34,7 @@
     "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
-    "eslint": "^7.18.0",
-
+    "html-webpack-plugin": "^4.5.1",
     "mini-css-extract-plugin": "^1.3.4",
     "node-loader": "^1.0.2",
     "sass": "^1.32.4",
@@ -48,5 +48,3 @@
     "normalize.css": "^8.0.1"
   }
 }
-
-
